refactor: abstract into more files

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   </head>
   <body>
     <canvas id="tela" width="400" height="600"></canvas>
+    <script src="./controls.js"></script>
+    <script src="./main.js"></script>
   </body>
-  <script src="main.js"></script>
 </html>
