--- a/index.html
+++ b/index.html
@@ -4,11 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/style.css">
     <title>Space Invaders</title>
   </head>
   <body>
-    <canvas id="tela" width="400" height="600"></canvas>
-    <script src="./controls.js"></script>
-    <script src="./main.js"></script>
+    <canvas id="tela" width="1920" height="1080"></canvas>
+    <script src="js/controls.js"></script>
+    <script src="js/main.js"></script>
   </body>
 </html>
