--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <title>Space Invaders</title>
   </head>
   <body>
-      <canvas id="tela" width="1920" height="1080"></canvas>
+      <canvas id="tela" width="1920" height="1080">O seu broswer não suporta estes elementos :(</canvas>
     <script src="js/controls.js"></script>
     <script src="js/main.js"></script>  </body>
 </html>
