--- a/initialScreen.html
+++ b/initialScreen.html
@@ -1,18 +1,17 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
+<html lang="pt-br">
+  <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
     <link rel="shortcut icon" href="assets/imgs/alienIcon.png" type="image/x-icon">
     <title>Space Invaders</title>
-</head>
-<body>
-    <body>
-        <canvas id="tela" width="1920" height="1080">O seu broswer não suporta estes elementos :(</canvas>
-      <script src="js/controls.js"></script>
-      <script src="js/main.js"></script>  
-    </body>
-</body>
+  </head>
+
+  <body>
+    <canvas id="tela" width="1920" height="1080">O seu broswer não suporta estes elementos :(</canvas>
+    <script src="js/controls.js"></script>
+    <script src="js/main.js"></script>  
+  </body>
 </html>
