--- a/game.html
+++ b/game.html
@@ -1,17 +1,18 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-  <head>
+<head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/gameLayout.css">
     <link rel="shortcut icon" href="assets/imgs/alienIcon.png" type="image/x-icon">
     <title>Space Invaders</title>
-  </head>
-
-  <body>
-    <canvas id="tela" width="1920" height="1080">O seu broswer não suporta estes elementos :(</canvas>
-    <script src="js/controls.js"></script>
-    <script src="js/main.js"></script>  
-  </body>
+</head>
+<body>
+    <canvas id="game">O seu browser não suporta esse elemento.</canvas>
+    <script type="module" src="js/main.js"></script>
+    <script>
+        
+    </script>
+</body>
 </html>
