feat: add bgm and sfx

--- a/index.html
+++ b/index.html
@@ -23,5 +23,6 @@
       </div>
     </div>
     <script src="js/records.js"></script>
+    <audio src="assets/audio/game-ost.mp3" autoplay></audio>
   </body>
 </html>
