feat, refactor and style: allow only 4 (four) letters as username and add rocket sound effect

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
 
   <body id="initialScreen">
     <div class="divMain">
-      <h2 id="typewriter" class="maquina-escrever">Digite o seu nome para embarcar na expedição: </h2> 
-      <input type="text" id="nameField" placeholder="Nome de usuário">
+      <h2 id="typewriter">Digite o seu nome para embarcar na expedição: </h2> 
+      <input type="text" id="nameField" placeholder="Nome de usuário" maxlength="4">
       <button type="submit" onclick="saveName()" id="playButton">JOGAR</button>
       <div id="players">
         <h3>Lista de jogadores:</h3>
