--- a/game.html
+++ b/game.html
@@ -11,6 +11,6 @@
 <body>
     <canvas id="game">O seu browser não suporta esse elemento.</canvas>
     <script type="module" src="js/main.js"></script>
-    <audio id="phaseOst" src="assets/audio/phase-ost.mp3" autoplay></audio>
+    <audio id="phaseOst" src="./assets/audio/phase-ost.mp3" type="audio/mp3" autoplay></audio>
 </body>
 </html>
