--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/stars.css">
     <link rel="shortcut icon" href="assets/imgs/alienIcon.png" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -13,6 +14,17 @@
   </head>
 
   <body id="initialScreen">
+    <div class="main-container">
+      <div class="sub-container">
+        <div class="sky">
+          <div class="stars"></div>
+          <div class="stars2"></div>
+          <div class="stars3"></div>
+          <div class="comet"></div>
+        </div>
+      </div>
+    </div>
+
     <div class="divMain">
       <h2 id="typewriter">Digite o seu nome para embarcar na expedição: </h2> 
       <input type="text" id="nameField" placeholder="Nome de usuário" maxlength="4">
@@ -22,14 +34,15 @@
         <ul id="playerList"></ul>
       </div>
     </div>
-    <audio id="gameOst" src="assets/audio/game-ost.mp3" autoplay></audio>
+
+    <audio id="gameOst" src="./assets/audio/game-ost.mp3" type="audio/mp3" autoplay></audio>
+
     <script src="js/records.js"></script>
     <script>
       function inicialize() {
         gameOst = document.getElementById("gameOst");
         gameOst.volume = 0.4;
       }
-
       inicialize();
     </script>
   </body>
