--- a/game.html
+++ b/game.html
@@ -10,7 +10,14 @@
 </head>
 <body>
     <canvas id="game">O seu browser não suporta esse elemento.</canvas>
-    <script type="module" src="js/main.js"></script>
+
     <audio id="phaseOst" src="./assets/audio/phase-ost.mp3" type="audio/mp3" autoplay></audio>
+    <audio id="rocketSfx" src="./assets/audio/sfx/rocket.mp3" type="audio/mp3"></audio>
+    <audio id="shipHitSfx" src="./assets/audio/sfx/ship-hit.wav" type="audio/wav"></audio>
+    <audio id="invaderHitSfx" src="./assets/audio/sfx/invader-hit.wav" type="audio/wav"></audio>
+    <audio id="gameOverSfx" src="./assets/audio/sfx/game-over.wav" type="audio/wav"></audio>
+    <audio id="winSfx" src="./assets/audio/sfx/win.wav" type="audio/wav"></audio>
+
+    <script type="module" src="js/main.js"></script>
 </body>
 </html>
