refactor: - change the name of var and classes - change the "var" to let or const

--- a/game.html
+++ b/game.html
@@ -12,9 +12,9 @@
     <canvas id="game">O seu browser não suporta esse elemento.</canvas>
 
     <audio id="phaseOst" src="./assets/audio/phase-ost.mp3" type="audio/mp3" autoplay></audio>
-    <audio id="rocketSfx" src="./assets/audio/sfx/rocket.mp3" type="audio/mp3"></audio>
-    <audio id="shipHitSfx" src="./assets/audio/sfx/ship-hit.wav" type="audio/wav"></audio>
-    <audio id="invaderHitSfx" src="./assets/audio/sfx/invader-hit.wav" type="audio/wav"></audio>
+    <audio id="fireSfx" src="./assets/audio/sfx/fire.mp3" type="audio/mp3"></audio>
+    <audio id="cannonHitSfx" src="./assets/audio/sfx/cannon-hit.wav" type="audio/wav"></audio>
+    <audio id="alienHitSfx" src="./assets/audio/sfx/alien-hit.wav" type="audio/wav"></audio>
     <audio id="gameOverSfx" src="./assets/audio/sfx/game-over.wav" type="audio/wav"></audio>
     <audio id="winSfx" src="./assets/audio/sfx/win.wav" type="audio/wav"></audio>
 
